[gd_scene load_steps=4 format=3 uid="uid://cfdjs6j10cq3g"]

[ext_resource type="Script" path="res://scenes/sprout.gd" id="1_qoh3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdvey"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.321569, 0.176471, 0.266667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aehoa"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.419608, 0.180392, 0.235294, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Sprout" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qoh3e")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NewProjectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "New Project"

[node name="ImportProjectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Import Project"

[node name="DeleteProjectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.321569, 0.176471, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.419608, 0.180392, 0.235294, 1)
theme_override_colors/font_hover_color = Color(0.419608, 0.180392, 0.235294, 1)
theme_override_colors/font_focus_color = Color(0.419608, 0.180392, 0.235294, 1)
theme_override_colors/font_hover_pressed_color = Color(0.419608, 0.180392, 0.235294, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_mdvey")
theme_override_styles/hover = SubResource("StyleBoxFlat_aehoa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aehoa")
theme_override_styles/focus = SubResource("StyleBoxFlat_mdvey")
text = "Delete Project"

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProjectList" type="ItemList" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
item_count = 3
item_0/text = "Test"
item_1/text = "SDF"
item_2/text = "TRHA"

[node name="NewProjectDialog" type="FileDialog" parent="."]
initial_position = 4
size = Vector2i(805, 449)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.json")

[node name="ImportProjectDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(805, 449)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/NewProjectButton" to="." method="_on_new_project_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ImportProjectButton" to="." method="_on_import_project_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/DeleteProjectButton" to="." method="_on_delete_project_button_pressed"]
[connection signal="item_activated" from="HBoxContainer/ScrollContainer/ProjectList" to="." method="_on_item_activated"]
[connection signal="file_selected" from="NewProjectDialog" to="." method="_on_dialog_file_selected"]
[connection signal="file_selected" from="ImportProjectDialog" to="." method="_on_dialog_file_selected"]
